[package]
name = "LDPC"
version = "0.1.0"
authors = ["Viet1004 <nguyenquocviet1004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version="0.15.3", features = ["approx"]  }
approx = "0.4.0"
rand = "0.8.4"
sprs = "0.11.0"
rand_chacha = "0.3.1"

[profile.test]
opt-level = 3
